@@ -1,4 +1,5 @@
 2001-10-22  Cristy  <cristy@mystic.es.dupont.com>
+	* Added a MPEG coder module.
 	* Added ImageType member to the image_info structure (suggested
 	  by Glenn)
 
